--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -2,20 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>signingStyle</key>
-    <string>manual</string>
-    <key>destination</key>
-    <string>export</string>
-    <key>teamID</key>
-    <string>KCKD42NRF8</string>
     <key>method</key>
     <string>app-store</string>
-    <key>signingCertificate</key>
-    <string>iPhone Distribution: Maksim Shemetov</string>
     <key>provisioningProfiles</key>
     <dict>
       <key>maxeem.america.flutter.converter</key>
-      <string>Converter - distr</string>
+      <string>Converter - distr 2</string>
     </dict>
 </dict>
 </plist>
