ci: include release not file 'RELEASE'

--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -67,6 +67,7 @@ jobs:
           token: ${{secrets.FIREBASE_TOKEN}}
           groups: testers-ios
           file: converter.ipa
+          releaseNotesFile: RELEASE
       - name: Delete artifact
         uses: geekyeggo/delete-artifact@v1
         with:
