ci: rename Firebase App Distribution test to 'testers-android'

--- a/.github/workflows/android-distribution.yml
+++ b/.github/workflows/android-distribution.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
           token: ${{secrets.FIREBASE_TOKEN}}
-          groups: testers
+          groups: testers-android
           file: build/app/outputs/flutter-apk/app-release.apk
           releaseNotesFile: RELEASE
