--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.CERTIFICATIONS_P12_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_DISTR_2 }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_DEV_ALL }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
